@@ -1,3 +1,7 @@
+Wed Jan  6 17:12:04 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>
+
+	* htlib/StringList.cc: fixed bug in StringList::Join (oops!)
+
 Wed Jan  6 10:34:45 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htcommon/DocumentRef.cc(AddDescription): Remove delete
